fix(video-player): v2 alignment

--- a/packages/styles/scss/components/video-player/_video-player.scss
+++ b/packages/styles/scss/components/video-player/_video-player.scss
@@ -69,6 +69,7 @@ $aspect-ratios: ((16, 9), (9, 16), (2, 1), (1, 2), (4, 3), (3, 4), (1, 1));
     position: relative;
     width: 100%;
     height: 100%;
+    padding-top: 0;
 
     &::before {
       content: '';
